--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,6 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Upload
-      uses: actions@v3
+      uses: actions/upload-artifact@v3
       with:
         path: target/*.jar
