Add <scope>provided</scope> to annotations library

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 			<groupId>org.jetbrains</groupId>
 			<artifactId>annotations</artifactId>
 			<version>23.0.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<properties>
